fix(ui): sidebar use grid to fit all elements on small screen

--- a/pkgs/app/src/components/Sidebar/index.module.scss
+++ b/pkgs/app/src/components/Sidebar/index.module.scss
@@ -44,8 +44,8 @@
 }
 
 .inner {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-rows: 72px 1fr 55px;
   width: 250px;
   height: 100vh;
 
